force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/ConfiguredSkuExternalId__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredSkuExternalId__c</fullName>
    <formula>SBQQ__ConfiguredSKU__r.cpqma_ExternalId__c</formula>
    <label>ConfiguredSkuExternalId</label>
    <type>Text</type>
</CustomField>