force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/ConstrainedOptionExternalId__c.field-meta.xml
<CustomField>
    <fullName>ConstrainedOptionExternalId__c</fullName>
    <formula>SBQQ__ConstrainedOption__r.cpqma_ExternalId__c</formula>
    <label>ConstrainedOptionExternalId</label>
    <type>Text</type>
</CustomField>