force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/ConstrainingOptionExternalId__c.field-meta.xml
<CustomField>
    <fullName>ConstrainingOptionExternalId__c</fullName>
    <formula>SBQQ__ConstrainingOption__r.cpqma_ExternalId__c</formula>
    <label>ConstrainingOptionExternalId</label>
    <type>Text</type>
</CustomField>